--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 </head>
 <body>
     <header>test header</header>
+    <section>sectionone</section>
     <footer>test footer</footer>
     <script src="js/js.js"></script>
 </body>
